Fix overflow problem with galleries and embedded yt-videos on small screen sizes

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -326,7 +326,7 @@ p {
 .yt-frame {
     height: fit-content;
     width: fit-content;
-    margin: 15px 0;
+    margin: 15px auto;
     padding: 0 25%;
 }
 
@@ -335,9 +335,11 @@ p {
     overflow-x: scroll;
     overflow-y: hidden;
     scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
     white-space: nowrap;
     width: 400px;
     height: 270px;
+    max-width: 90%;
     margin: auto;
     border-radius: 0 20px 0 0;
     border: #3b6385 3px outset;
@@ -500,6 +502,14 @@ footer h3 {
     .screenshots {
         width: 300px;
         height: auto;
+    }
+
+    .member-img {
+        height: 150px;
+    }
+
+    #damalas-pic {
+        height: 90px;
     }
 
 }
